--- a/src/components/cssAnimations/myCSS.css
+++ b/src/components/cssAnimations/myCSS.css
@@ -1,85 +1,144 @@
 
-#closeButton {
-  width: 60px;
-  height: 45px;
-  position: relative;
-  margin: 50px auto;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  cursor: pointer;
+.open{
+	position: fixed;
+	top: 40px;
+	right: 40px;
+	width: 50px;
+	height: 50px;
+	display: block;
+	cursor: pointer;
+	transition: opacity 0.2s linear;
 }
 
-#closeButton span {
-  display: block;
-  position: absolute;
-  height: 9px;
-  width: 100%;
-  background: #d3531a;
-  border-radius: 9px;
-  opacity: 1;
-  left: 0;
-  -webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .25s ease-in-out;
-  -moz-transition: .25s ease-in-out;
-  -o-transition: .25s ease-in-out;
-  transition: .25s ease-in-out;
+.open:hover {
+	opacity: 0.8;
 }
 
-#closeButton {
+.open span{
+	display: block;
+	float: left;
+	clear: both;
+	height: 4px;
+	width: 40px;
+	border-radius: 40px;
+	background-color: #fff;
+	position: absolute;
+	right: 3px;
+	top: 3px;
+	overflow: hidden;
+	transition: all 0.4s ease;
 }
 
-#closeButton span:nth-child(1) {
-	top: 0px;
-	-webkit-transform-origin: left center;
-	-moz-transform-origin: left center;
-	-o-transform-origin: left center;
-	transform-origin: left center;
+.open span:nth-child(1) {
+	margin-top: 10px;
+	z-index: 9;
+}
+.open span:nth-child(2) {
+	margin-top: 25px;
+}
+.open span:nth-child(3) {
+	margin-top: 40px;
 }
 
-#closeButton span:nth-child(2) {
-	top: 18px;
-	-webkit-transform-origin: left center;
-	-moz-transform-origin: left center;
-	-o-transform-origin: left center;
-	transform-origin: left center;
+
+
+.sub-menu {
+	transition: all 0.8s cubic-bezier(0.68, -0.55, 0.265, 1.55);
+	height: 0;
+	width: 0;
+	right: 0;
+	top: 0;
+	position: absolute;
+	background-color: rgba(38, 84, 133, 0.54);
+	border-radius: 50%;
+	z-index: 18;
+	overflow: hidden;
+	list-style-type: none;
 }
 
-#closeButton span:nth-child(3) {
-	top: 36px;
-	-webkit-transform-origin: left center;
-	-moz-transform-origin: left center;
-	-o-transform-origin: left center;
-	transform-origin: left center;
+
+.sub-menu li {
+	play: block;
+	clear: both;
+	height: auto;
+	margin-right: -200px;
+	transition: all 0.5s cubic-bezier(0.68, -0.55, 0.265, 1.55);
 }
 
-#closeButton.open span:nth-child(1) {
-	-webkit-transform: rotate(45deg);
-	-moz-transform: rotate(45deg);
-	-o-transform: rotate(45deg);
+.sub-menu li a:hover {
+	color: var(--blue-green);
+}
+
+.sub-menu li:first-child{
+	margin-top: 180px;
+}
+
+.sub-menu li:nth-child(1){
+	-webkit-transition-delay: 0.05s;
+}
+
+.sub-menu li:nth-child(2){
+	-webkit-transition-delay: 0.10s;
+}
+
+.sub-menu li:nth-child(3){
+	-webkit-transition-delay: 0.15s;
+}
+.sub-menu li:nth-child(4){
+	-webkit-transition-delay: 0.20s;
+}
+
+.sub-menu li:nth-child(5){
+	-webkit-transition-delay: 0.25s;
+}
+
+.sub-menu li a {
+	color: #fff;
+	font-family: var(--font);
+	font-size: 16px;
+	width: 100%;
+	display: block;
+	float: left;
+	line-height: 40px;
+}
+
+
+.oppenned span:nth-child(2){
+	height: 400px;
+	width: 400px;
+	right: -160px;
+	top: -160px;
+	border-radius: 50%;
+	background-color: rgba(38, 84, 133, 0.54);
+}
+
+.oppenned span:nth-child(3){
+	transform: rotate(-45deg) translateY(-10px) translateX(10px);
+}
+
+.oppenned li{
+	margin-right: 100px;
+}
+
+
+.oppenned .sub-menu{
+	opacity: 1;
+	height: 400px;
+	width: 400px;
+}
+.oppenned span:nth-child(2){
+	overflow: visible;
+}
+
+.oppenned span:nth-child(3){
+	z-index: 100;
+}
+
+.oppenned span:nth-child(1){
+	z-index: 100;
 	transform: rotate(45deg);
-	top: -3px;
-	left: 8px;
 }
 
-#closeButton.open span:nth-child(2) {
-	width: 0%;
-	opacity: 0;
-}
-
-#closeButton.open span:nth-child(3) {
-	-webkit-transform: rotate(-45deg);
-	-moz-transform: rotate(-45deg);
-	-o-transform: rotate(-45deg);
-	transform: rotate(-45deg);
-	top: 39px;
-	left: 8px;
+.oppenned span:nth-child(1){
+	transform: rotate(45deg) translateY(12px) translateX(12px);
 }
