--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
 /* Color palette */
 
 :root {
-	--blue-green: #13a19c;
+	--blue-green: #00d8ff;
 	--cloudy-blue: #d4d4df;
 	--dark: #242e41;
 	--dark-two: #31384b;
@@ -16,7 +16,7 @@
 
 .App {
 	text-align: center;
-	background-color: var(--dark);
+	background-color: rgba(36,46,65,0.75);
 	height: 100%;
 }
 
@@ -28,8 +28,7 @@
 
 .App-header {
 	width: 100%;
-	height: 200px;
-	background-image: url('./img/header.png');
+	height: 25px;
 	background-position: center;
 	background-size: cover;
 }
