--- a/src/components/movies/movies.css
+++ b/src/components/movies/movies.css
@@ -1,3 +1,61 @@
 .background-poster-img {
 	width: 100%;
 }
+
+.movieListMainContainer {
+	display: flex;
+	flex-direction: row;
+	flex-wrap: wrap;
+	justify-content: center;
+	align-items: flex-start;
+	margin-top: 50px;
+	overflow: scroll;
+	height: calc(100vh - 300px) !important;
+}
+
+.movieListContainer {
+	width: 300px;
+	height: 522px;
+	background-color: #31384b;
+	background-color: var(--dark-two);
+	margin-right: 20px;
+	margin-bottom: 20px;
+}
+
+
+.movieListMainImage img {
+	width: 250px;
+	height: 354.1px;
+	margin-top: 30px;
+	margin-bottom: 30px;
+}
+
+.moviesListBottomContainer {}
+
+
+.movieListMovieTitle {
+	display: block;
+    max-width: 300px;
+    height: 60px;
+    margin: 0 auto;
+    line-height: 30px;
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
+
+.movieListMovieTitle, .movieListMovieReleaseDate  {
+	font-family: var(--font);
+	font-size: 20px;
+	font-weight: bold;
+	text-align: center;
+	color: #d4d4df;
+	color: var(--cloudy-blue);
+	overflow: hidden;
+	text-overflow: ellipsis;
+}
+
+.movieListMovieReleaseDate {
+	height: 23px;
+}
