--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,7 @@
 	--lipstick: #e1151c;
 	--cherry-red-80: rgba(225, 11, 20, 0.8);
 	--neon-blue: #00d3ff;
+	--white: #ffffff;
 	--font: 'Lato', sans-serif;
 }
 
