--- a/src/App.css
+++ b/src/App.css
@@ -27,9 +27,9 @@
 }
 
 .App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
-  cursor: pointer;
+	animation: App-logo-spin infinite 20s linear;
+	height: 80px;
+	cursor: pointer;
 }
 
 .App-header {
@@ -40,10 +40,12 @@
 }
 
 .App-intro {
-  font-size: large;
+	font-size: large;
 }
 
 @keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+	from { transform: rotate(0deg); }
+	to { transform: rotate(360deg); }
+}
+
 }
