--- a/src/App.css
+++ b/src/App.css
@@ -48,4 +48,20 @@
 	to { transform: rotate(360deg); }
 }
 
+
+.noSelect {
+	-moz-user-select: none;
+	-khtml-user-select: none;
+	-webkit-user-select: none;
+	-ms-user-select: none;
+	user-select: none;
+}
+
+.center {
+	justify-content: center;
+	justify-items: center;
+	justify-self: center;
+	align-items: center;
+	align-self: center;
+	align-content: center;
 }
