select no drag css

--- a/src/App.css
+++ b/src/App.css
@@ -55,6 +55,8 @@
 	-webkit-user-select: none;
 	-ms-user-select: none;
 	user-select: none;
+	user-drag: none; 
+	-webkit-user-drag: none;
 }
 
 .center {
